#ifndef ABSTRACTEXPRESSION_H
#define ABSTRACTEXPRESSION_H


class AbstractExpression
{
public:
    AbstractExpression();
};

#endif // ABSTRACTEXPRESSION_H
